syntax = "proto3";

package api.roles.service.v1;
import "google/api/annotations.proto";

option go_package = "github.com/it-moom/moom-roles/api/roles/service/v1;v1";
option java_multiple_files = true;
option java_package = "api.roles.service.v1";

service Roles {
	rpc CreateSuperUser (CreateSuperUserRequest) returns (CreateSuperUserResponse){
        option (google.api.http) = {
            get: "/v1/superuser/create",
        };
    };
}

message CreateSuperUserRequest {}
message CreateSuperUserResponse {}


